Correct CS In WebEndPoint & ReCreate Init Migration

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=localhost;Initial Catalog=CleanArc_DB;Integrated Security=true"
+    "SqlServer": "Data Source=localhost;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
   },
   "IdentitySettings": {
     "SecretKey": "LongerThan-16Char-SecretKey",
