--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -15,4 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Features\Area\Queries\" />
+  </ItemGroup>
 </Project>
