--- a/Web.Api/Web.Api.csproj
+++ b/Web.Api/Web.Api.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\WebFramework\WebFramework.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Area\" />
+  </ItemGroup>
+
 </Project>
