create EmployerAcivityField API

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=localhost;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
+    //ARCHDEVICE\MSSQLSERVER01
+    //"SqlServer": "Data Source=localhost;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
+    "SqlServer": "Data Source=ARCHDEVICE\\MSSQLSERVER01;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
   },
   "IdentitySettings": {
     "SecretKey": "LongerThan-16Char-SecretKey",
