Some Correction On Sharifi's Code !

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     //ARCHDEVICE\MSSQLSERVER01
     //"SqlServer": "Data Source=localhost;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
-    "SqlServer": "Data Source=ARCHDEVICE\\MSSQLSERVER01;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
+    "SqlServer": "Data Source=.;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
   },
   "IdentitySettings": {
     "SecretKey": "LongerThan-16Char-SecretKey",
