--Incomoplete  Convert SqlDb To PostgresqlDb

--- a/Web.Api/appsettings.json
+++ b/Web.Api/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     //ARCHDEVICE\MSSQLSERVER01
     //"SqlServer": "Data Source=localhost;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
-    "SqlServer": "Data Source=.;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
+    //"SqlServer": "Data Source=.;Initial Catalog=EmploymentAgencyDb;Integrated Security=true"
+    "PostgreSQL": "User ID=postgres;Password=1;Host=localhost;Port=5432;Database=EmploymentAgencyDb;Pooling=true;"
   },
   "IdentitySettings": {
     "SecretKey": "LongerThan-16Char-SecretKey",
