Revert "Correct Publish Settings !"
This reverts commit 1fee653d4e6d9b1d4e6bc07a69ac28baf9ad0e97.

--- a/Web.Api/Web.Api.csproj
+++ b/Web.Api/Web.Api.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-	  <ImplicitUsings>enable</ImplicitUsings>C
-	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>Project.xml</DocumentationFile>
