--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\WorkExperienceConfig\" />
+  </ItemGroup>
+
 </Project>
